# Mingren-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MAINTENANCE.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  skill-manifest.yaml
docs/: behavior_alignment_review.md  installation.md  requirements_traceability.md  runtime_contract.md
evals/: cases.yaml  failure-taxonomy.md  failure_taxonomy.md  host_cases.yaml  manual_evaluation.md  quality-rubric.md
evals/prompt_snapshots/: chinese_feynman.yaml  chinese_system.yaml  definition_clarification.yaml  direct_fallback.yaml  emergency_override.yaml  english_socratic.yaml  laozi_dynamic.yaml  multi_lens_compatible.yaml
examples/: README.md  bad-vs-good.md  feynman-gradient-descent.md  laozi-calculus.md  socrates-basis.md  von-neumann-neural-network.md
references/: distillation-framework.md  distillation_framework.md  response-framework.md  safety-boundaries.md  safety_boundaries.md  trigger-framework.md  trigger_rules.yaml
references/thinkers/: feynman.md  laozi.md  socrates.md  von-neumann.md
scripts/: __init__.py  build_skill_bundle.py  validate.py
src/mingren_skill/: __init__.py  __main__.py  engine.py  language.py  loaders.py  models.py  prompt_builder.py  response_validator.py  router.py  safety.py
tests/: test_bundle_builder.py  test_cli.py  test_engine.py  test_language.py  test_loaders.py  test_prompt_builder.py  test_response_validator.py  test_router.py  test_safety.py  test_validation.py
